test/analyzer/inputs/invalid/out-of-scope.yah
x is (fun) ->
   y is 2
y be 5
